--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" name="last_name" placeholder="Фамилия" required>
       <input type="text" name="first_name" placeholder="Имя" required>
       <input type="text" name="middle_name" placeholder="Отчество">
-      <input type="email" name="email" placeholder="Электронная почта" required>
+      <input type="email" name="email" placeholder="Электронная почта" 
       <input type="tel" name="phone" placeholder="Номер телефона" required>
 
       <div class="checkbox-group">
@@ -32,4 +32,4 @@
     </form>
   </div>
 </body>
-</html>
+</html
